Fixes for compiling with vtk 6.1 and new viscl

--- a/config/synth-super.cfg
+++ b/config/synth-super.cfg
@@ -22,5 +22,5 @@ uint iterations = 2000
 
 string output_image = super.png
 
-%string crop_window = 267 347 304 200
+string crop_window = 267 347 304 200
 %string crop_window = 200 32 150 32
