--- a/libraries/CMakeLists.txt
+++ b/libraries/CMakeLists.txt
@@ -1,5 +1,4 @@
 set(CXX_SRC_FILES
-  config.cxx                    config.h
   cost_volume.cxx               cost_volume.h
   depth_map.cxx                 depth_map.h
   exposure.cxx                  exposure.h
@@ -9,6 +8,7 @@ set(CXX_SRC_FILES
   multiscale.cxx                multiscale.h
   normal_map.cxx                normal_map.h
   rof_normals.cxx               rof_normals.h
+  super_config.cxx              super_config.h
   tv_refine_search.cxx          tv_refine_search.h
   tv_refine_plane.cxx           tv_refine_plane.h
   tv_utils.cxx                  tv_utils.h
@@ -25,7 +25,7 @@ target_link_libraries(depthl vil vidtk_video_transforms vidtk_tracking imesh_alg
                       vnl vul vil_algo vgl_algo vbl)
 
 if(VTK_FOUND)
-  target_link_libraries(depthl vtkGraphics vtkIO)
+  target_link_libraries(depthl ${VTK_LIBRARIES})
   set_source_files_properties(depth_map.cxx
       PROPERTIES
       COMPILE_DEFINITIONS HAVE_VTK)
