--- a/config/synth-paths.cfg
+++ b/config/synth-paths.cfg
@@ -1,11 +1,3 @@
-%Dataset to use to for creating low res imagery on the fly
-%string camera_file = C:/Data/synthetic_data/simple2/cams100.txt
-%string frame_list = C:/Data/synthetic_data/simple2/frames.txt
-%string directory = C:/Data/synthetic_data/simple2/images100/
-%string high_res_depth = C:/Data/synthetic_data/simple2/depth_maps100/depth-00001.tiff
-%bool create_low_res = True
-%double scale_factor = 2
-
 %Dataset specifying low res imagery
 string camera_file = C:/Data/synthetic_data/simple2/cams100.txt
 string frame_list = C:/Data/synthetic_data/simple2/frames.txt
@@ -13,5 +5,6 @@ string directory = C:/Data/synthetic_data/simple2/images/
 string high_res_depth = C:/Data/synthetic_data/simple2/depth_maps_2x/depth-00001.tiff
 %string ground_truth = C:\Data\synthetic_data\simple2\images_2x\0001.png
 bool create_low_res = False
+bool crop_depth = True
 double camera_scale = 1  % camera_scale = scale_of_cameras / scale_of_low_res
 %double scale_factor = 2
