Illumination correction on super res and depth works w/ maptk

--- a/config/synth-paths.cfg
+++ b/config/synth-paths.cfg
@@ -1,7 +1,7 @@
 %Dataset specifying low res imagery
 string camera_file = C:/Data/synthetic_data/simple2/cams100.txt
-string frame_list = C:/Data/synthetic_data/simple2/frames.txt
-string directory = C:/Data/synthetic_data/simple2/images/
+string frame_list = C:/Data/synthetic_data/framelist.txt
+string directory = C:/Data/synthetic_data/
 string high_res_depth = C:/Data/synthetic_data/simple2/depth_maps_2x/depth-00001.tiff
 %string ground_truth = C:\Data\synthetic_data\simple2\images_2x\0001.png
 bool create_low_res = False
