--- a/config/synth-super.cfg
+++ b/config/synth-super.cfg
@@ -8,6 +8,8 @@ bool use_color = true
 bool upsample_depth = false
 
 double lambda = 0.005
+double lambda_a0 = 0.01
+double lambda_a1 = 0.01
 double sigma = .15
 double tau = .15
 double epsilon_data = 0.01
