--- a/config/synth.cfg
+++ b/config/synth.cfg
@@ -22,12 +22,12 @@ string output_float_depthmap = depth_map.tiff
 string obj_file = ref_depth.obj
 
 uint num_slices = 90
-double lambda = 1
+double lambda = 0.5
 double gw_alpha = 10
-double intensity_cost_weight = .5
+double intensity_cost_weight = 0
 %double color_cost_weight = 0
-double gradient_cost_weight = .5
-double census_cost_weight = 0
+double gradient_cost_weight = 0
+double census_cost_weight = 1
 double theta_start = 1.0
 double theta_end = 0.00001
 %double beta = 0.04
