--- a/super3d/vxl_brl_imesh/algo/CMakeLists.txt
+++ b/super3d/vxl_brl_imesh/algo/CMakeLists.txt
@@ -39,7 +39,8 @@ super3d_install_headers(${imesh_algo_headers} SUBDIR imesh/algo)
 super3d_add_library(imesh_algo ${imesh_algo_headers} ${imesh_algo_sources})
 
 if(VXL_NETLIB_FOUND)
-  target_link_libraries( imesh_algo imesh vpgl bpgl bpgl_algo vgl_algo vgl vnl_algo vnl vil netlib)
+  #target_link_libraries( imesh_algo imesh vpgl bpgl bpgl_algo vgl_algo vgl vnl_algo vnl vil netlib)
+  target_link_libraries( imesh_algo imesh vpgl vgl_algo vgl vnl_algo vnl vil netlib )
 else(VXL_NETLIB_FOUND)
   target_link_libraries( imesh_algo imesh vpgl vgl_algo vgl vnl_algo vnl vil )
 endif(VXL_NETLIB_FOUND)
