--- a/super3d/depth_cl/CMakeLists.txt
+++ b/super3d/depth_cl/CMakeLists.txt
@@ -18,9 +18,9 @@ set(cxx_files
 
 viscl_encode_opencl_sources(cl_strings.cxx ${ocl_src_files})
 
-super3d_install_headers(${header_files})
-super3d_add_library(depth_cl
+super3d_install_headers(${header_files} SUBDIR depth_cl)
+super3d_add_library(super3d_depth_cl
   ${ocl_src_files} ${header_files} ${cxx_files}
   cl_strings.cxx
   )
-target_link_libraries(depth_cl vil vil_algo vnl viscl_vxl )
+target_link_libraries(super3d_depth_cl vil vil_algo vnl viscl_vxl)
