--- a/super3d/CMakeLists.txt
+++ b/super3d/CMakeLists.txt
@@ -18,8 +18,7 @@ include_directories("${Super3D_SOURCE_DIR}")
 include_directories("${Super3D_BINARY_DIR}")
 
 
-super3d_add_module(bp "${CMAKE_CURRENT_LIST_DIR}/bp-tools")
-super3d_add_module(imesh "${CMAKE_CURRENT_LIST_DIR}/vxl_brl_imesh")
+super3d_add_module(imesh "${CMAKE_CURRENT_LIST_DIR}/imesh")
 
 super3d_add_module(super3d_depth "${CMAKE_CURRENT_LIST_DIR}/depth"
                    DEPENDS imesh)
