--- a/super3d/depth/CMakeLists.txt
+++ b/super3d/depth/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(header_files
   cost_volume.h
+  depth_config.h
   depth_map.h
   exposure.h
   file_io.h
@@ -17,7 +18,6 @@ set(header_files
   world_space.h
   weighted_dbw.h
   super_res.h
-  super_depth.h
   )
 
 set(cxx_files
@@ -39,7 +39,6 @@ set(cxx_files
   world_space.cxx
   weighted_dbw.cxx
   super_res.cxx
-  super_depth.cxx
   )
 
 super3d_install_headers(${header_files} SUBDIR depth)
