--- a/super3d/imesh/algo/CMakeLists.txt
+++ b/super3d/imesh/algo/CMakeLists.txt
@@ -46,6 +46,6 @@ else(VXL_NETLIB_FOUND)
   target_link_libraries( imesh_algo imesh vpgl vgl_algo vgl vnl_algo vnl vil )
 endif(VXL_NETLIB_FOUND)
 
-#if( BUILD_TESTING )
-#  SUBDIRS(tests)
-#endif( BUILD_TESTING )
+if( BUILD_TESTING )
+  add_subdirectory(tests)
+endif( BUILD_TESTING )
