--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -20,6 +20,8 @@ include_directories("${Super3D_SOURCE_DIR}")
 include_directories("${Super3D_BINARY_DIR}")
 
 # diving into module test directories
+add_subdirectory(imesh)
+add_subdirectory(imesh_algo)
 add_subdirectory(depth)
 
 #super3d_build_test(normal_map libraries test_normal_map.cxx)
