--- a/config/sr_robust_gradient.cfg
+++ b/config/sr_robust_gradient.cfg
@@ -1,17 +1,22 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % baseline parameters
 
-string camera_file = /home/sun/p/t3/sr/synthetic_data/across/simple100.cam
-string frame_list = /home/sun/p/t3/sr/synthetic_data/across/frames_across.txt
-string high_res_depth = /home/sun/p/t3/sr/synthetic_data/across/depth_00001.tiff
-bool create_low_res = False
-bool crop_depth = True
-double camera_scale = 1  % camera_scale = scale_of_cameras / scale_of_low_res
-
-uint ref_frame = 0
-double scale_factor = 2
+string camera_file = /home/sun/p/t3/sr/midterm/common/simple100.cam
+string directory = /home/sun/p/t3/sr/synthetic_data/
+string frame_list = /home/sun/p/t3/sr/midterm/common/simple_across5_list.txt
+string high_res_depth = /home/sun/p/t3/sr/midterm/common/simple_across5_depth.tiff
 
 bool use_normal_weighting = True
+uint iterations = 2000
+string output_image = sr.png
+string crop_window = 267 347 304 200
+bool crop_depth = False % True
+bool upsample_depth = True % false
+
+uint ref_frame = 0
+bool create_low_res = False
+double camera_scale = 1
+double scale_factor = 2
 
 double lambda = 0.005
 double sigma = .15
@@ -22,15 +27,7 @@ double sensor_sigma = .5
 
 bool down_sample_averaging = True
 bool bicubic_warping = False
-
-uint iterations = 1000  % 2000
-
-string output_image = super.png
-
 bool use_color = true
-bool upsample_depth = false
-
-string crop_window = 385 220 360 150
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % additional parameters
@@ -38,9 +35,12 @@ string crop_window = 385 220 360 150
 string tv_method=GRADIENTDATA_IMAGEPRIOR
 string cost_function=HUBER_NORM
 
+double erosion_radius = 2
+bool debug = True
+
 double alpha_g = 0.01
 double sigma_qg = 0.15
-double lambda_g = 0.1 %0.5 % 0.1
+double lambda_g = 0.1
 
 double lambda_r = 0.005
 double sigma_pr = 0.15
