modify config files

--- a/config/sr_robust_gradient.cfg
+++ b/config/sr_robust_gradient.cfg
@@ -36,7 +36,9 @@ string tv_method=GRADIENTDATA_IMAGEPRIOR
 string cost_function=HUBER_NORM
 
 double erosion_radius = 2
+double median_radius = 5
 bool debug = True
+int frame_step = 15
 
 double alpha_g = 0.01
 double sigma_qg = 0.15
