Super3D config incorrectly referred to maptk

--- a/CMake/templates/cmake/super3d-config.cmake.in
+++ b/CMake/templates/cmake/super3d-config.cmake.in
@@ -4,5 +4,5 @@ set(Super3D_INCLUDE_DIR "@Super3D_SOURCE_DIR@/super3d")
 set(Super3D_LIBRARY_DIR "@Super3D_BINARY_DIR@/lib")
 set(Super3D_CMAKE_DIR   "@Super3D_SOURCE_DIR@/CMake")
 
-# Export definitions for maptk to be used from find_package
-include("${CMAKE_CURRENT_LIST_DIR}/maptk-config-targets.cmake")
+# Export definitions for super3d to be used from find_package
+include("${CMAKE_CURRENT_LIST_DIR}/super3d-config-targets.cmake")
