--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,9 +53,6 @@ add_definitions(-DBOOST_ALL_NO_LIB)
 include_directories(SYSTEM ${Boost_INCLUDE_DIRS})
 link_directories(${Boost_LIBRARY_DIRS})
 
-find_package(vidtk REQUIRED)
-include_directories(SYSTEM ${VIDTK_INCLUDE_DIRS})
-
 find_package(VXL REQUIRED)
 set(VXL_PROVIDE_STANDARD_OPTIONS 1)
 include(${VXL_CMAKE_DIR}/UseVXL.cmake)
@@ -75,10 +72,11 @@ if(viscl_FOUND)
   message(STATUS "VisCL Boost include dir: ${viscl_Boost_INCLUDE_DIR}")
 endif()
 
-find_package(VTK)
+find_package(VTK 6.2)
 if(VTK_FOUND)
   message(STATUS "[main] Found VTK optional package")
-  include(${USE_VTK_FILE})
+  message(STATUS "VTK use file: ${VTK_USE_FILE}")
+  include(${VTK_USE_FILE})
   include_directories(SYSTEM ${VTK_INCLUDE_DIRS})
   link_directories(${VTK_LIBRARY_DIRS})
 endif()
