--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,7 +48,7 @@ if(WIN32)
 else()
   option(Boost_USE_STATIC_LIBS "Use a statically-linked Boost" OFF)
 endif()
-find_package(Boost 1.48 REQUIRED COMPONENTS chrono system)
+find_package(Boost 1.48 REQUIRED COMPONENTS chrono system filesystem)
 add_definitions(-DBOOST_ALL_NO_LIB)
 include_directories(SYSTEM ${Boost_INCLUDE_DIRS})
 link_directories(${Boost_LIBRARY_DIRS})
