--- a/super3d/image/CMakeLists.txt
+++ b/super3d/image/CMakeLists.txt
@@ -8,9 +8,11 @@ set(header_files
   dense_optical_flow.h
   dual_rof_denoise.h
   gaussian_pyramid_builder.h
+  middlebury_flow_io.h
   refine_homography.h
   super_res.h
   super_res_utils.h
+  warp_and_average.h
   warp_image.h
 )
 
@@ -21,9 +23,12 @@ set(cxx_files
   dual_rof_denoise.cxx
   gaussian_pyramid_builder.txx
   gaussian_pyramid_builder_instances.cxx
+  middlebury_flow_io.cxx
   refine_homography.cxx
   super_res.cxx
   super_res_utils.cxx
+  warp_and_average.txx
+  warp_and_average_instances.cxx
   warp_image.txx
   warp_image.cxx
   warp_image_instances.cxx
@@ -32,5 +37,5 @@ set(cxx_files
 super3d_install_headers(${header_files} SUBDIR image)
 super3d_add_library(super3d_image ${header_files} ${cxx_files})
 target_link_libraries(super3d_image
-  vil_algo vnl_algo vgl
+  vil_algo vnl_algo vgl_algo
 )
