rename vidtk namespace to super3d

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -139,7 +139,7 @@ super3d_add_executable(extract_nitf_roi_krtd extract_nitf_roi_krtd.cxx)
 target_link_libraries(extract_nitf_roi_krtd
                       super3d_depth
                       vpgl_file_formats vpgl_algo
-                      #vidtk_vil_plugins
+                      #super3d_vil_plugins
                       ${Boost_SYSTEM_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
 
 #
