--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,12 +54,17 @@ include_directories(SYSTEM ${Boost_INCLUDE_DIRS})
 link_directories(${Boost_LIBRARY_DIRS})
 
 find_package(VXL REQUIRED)
+if( VXL_CORE_INCLUDE_DIRS )
+  include_directories( SYSTEM ${VXL_CORE_INCLUDE_DIRS} )
+  include_directories( SYSTEM ${VXL_VCL_INCLUDE_DIRS} )
+else()
+  include_directories( SYSTEM ${VXL_CORE_INCLUDE_DIR} )
+  include_directories( SYSTEM ${VXL_VCL_INCLUDE_DIR} )
+endif()
+include_directories( SYSTEM ${VXL_RPL_INCLUDE_DIR} )
+link_directories( ${VXL_LIBRARY_DIR} )
 set(VXL_PROVIDE_STANDARD_OPTIONS 1)
 include(${VXL_CMAKE_DIR}/UseVXL.cmake)
-include_directories( SYSTEM ${VXL_CORE_INCLUDE_DIRS} )
-include_directories( SYSTEM ${VXL_VCL_INCLUDE_DIRS} )
-include_directories(SYSTEM ${VXL_GEL_INCLUDE_DIR}/mrc)
-include_directories(SYSTEM ${VXL_RPL_INCLUDE_DIR})
 
 ### OPTIONAL Packages
 
