--- a/tests/imesh/CMakeLists.txt
+++ b/tests/imesh/CMakeLists.txt
@@ -13,7 +13,7 @@ super3d_build_test(imesh_all
     test_kd_tree.cxx
     test_imls_surface.cxx
   LINK_LIBS
-    imesh imesh_algo
+    super3d_imesh super3d_imesh_algo
     vnl vgl testlib
   )
 
@@ -27,5 +27,5 @@ super3d_build_test(imesh_includes
   SOURCES
     test_include.cxx
   LINK_LIBS
-    imesh
+    super3d_imesh
   )
