--- a/tests/imesh_algo/CMakeLists.txt
+++ b/tests/imesh_algo/CMakeLists.txt
@@ -2,12 +2,12 @@ super3d_build_test(imesh_algo_includes
   SOURCES
     test_include.cxx
   LINK_LIBS
-    imesh_algo
+    super3d_imesh_algo
   )
 
 super3d_build_test(imesh_algo_template
   SOURCES
     test_template_include.cxx
   LINK_LIBS
-    imesh_algo
+    super3d_imesh_algo
   )
